// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusInfoModal should match snapshot when not visible 1`] = `
<View
  isVisible={false}
  onBackdropPress={[MockFunction]}
  overlayStyle={
    {
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "bottom": 0,
      "left": 0,
      "margin": 0,
      "padding": 0,
      "position": "absolute",
      "right": 0,
      "width": 750,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        {
          "paddingHorizontal": 24,
          "paddingVertical": 20,
        },
        null,
        null,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
          },
          null,
          null,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15,
              "justifyContent": "center",
            },
            null,
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "color": "#000000",
              "flex": 1,
              "fontSize": 18,
              "lineHeight": 26,
              "marginRight": 12,
            },
          ]
        }
      >
        statusInfoTitle
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flexShrink": 0,
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <View
          color="#000"
          name="close"
          size={24}
          type="material"
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          {
            "marginTop": 10,
          },
          null,
          null,
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            ValidIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.valid.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.valid.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            PendingIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.pending.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.pending.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            ExpiredIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.expired.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.expired.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            RevokedIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.revoked.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.revoked.description
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`StatusInfoModal should match snapshot when visible 1`] = `
<View
  isVisible={true}
  onBackdropPress={[MockFunction]}
  overlayStyle={
    {
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "bottom": 0,
      "left": 0,
      "margin": 0,
      "padding": 0,
      "position": "absolute",
      "right": 0,
      "width": 750,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "justifyContent": undefined,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        {
          "paddingHorizontal": 24,
          "paddingVertical": 20,
        },
        null,
        null,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "row",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 20,
          },
          null,
          null,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#000000",
              "fontSize": 16,
              "lineHeight": 18,
            },
            {
              "fontFamily": "Montserrat_700Bold",
              "fontSize": 15,
              "justifyContent": "center",
            },
            null,
            {
              "textAlign": "left",
            },
            null,
            null,
            {
              "color": "#000000",
              "flex": 1,
              "fontSize": 18,
              "lineHeight": 26,
              "marginRight": 12,
            },
          ]
        }
      >
        statusInfoTitle
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "flexShrink": 0,
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <View
          color="#000"
          name="close"
          size={24}
          type="material"
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          {
            "marginTop": 10,
          },
          null,
          null,
        ]
      }
    >
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            ValidIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.valid.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.valid.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            PendingIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.pending.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.pending.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            ExpiredIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.expired.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.expired.description
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#E0E0E0",
              "height": 1,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            [
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "justifyContent": undefined,
              },
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "paddingVertical": 12,
              },
              null,
              null,
            ]
          }
        >
          <View
            style={
              {
                "marginRight": 12,
                "marginTop": 2,
              }
            }
          >
            RevokedIcon
          </View>
          <View
            style={
              [
                {
                  "alignItems": undefined,
                  "flexDirection": "column",
                  "justifyContent": undefined,
                },
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                null,
                {
                  "flex": 1,
                },
                null,
                null,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_600SemiBold",
                    "fontSize": 15,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#000000",
                    "fontSize": 14,
                    "marginBottom": 4,
                  },
                ]
              }
            >
              statusToolTipContent.revoked.title
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#000000",
                    "fontSize": 16,
                    "lineHeight": 18,
                  },
                  {
                    "fontFamily": "Montserrat_400Regular",
                    "fontSize": 14,
                  },
                  null,
                  {
                    "textAlign": "left",
                  },
                  null,
                  null,
                  {
                    "color": "#666666",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                ]
              }
            >
              statusToolTipContent.revoked.description
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
